RESOLVED FIXED292739
xkcd.com: Back navigation doesn't work after using the "random" button
https://bugs.webkit.org/show_bug.cgi?id=292739
Summary xkcd.com: Back navigation doesn't work after using the "random" button
Charlie Wolfe
Reported 2025-05-08 13:46:21 PDT
...
Attachments
Charlie Wolfe
Comment 1 2025-05-08 13:46:22 PDT
Charlie Wolfe
Comment 2 2025-05-08 13:47:22 PDT
Charlie Wolfe
Comment 3 2025-05-12 10:41:16 PDT
*** Bug 19506 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2025-05-12 11:40:44 PDT
Committed 294798@main (ac5860080b7d): <https://commits.webkit.org/294798@main> Reviewed commits have been landed. Closing PR #45126 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.