xkcd.com: Back navigation doesn't work after using the "random" button https://bugs.webkit.org/show_bug.cgi?id=292739 rdar://90175606

Reviewed by Alex Christensen.

This condition was added 22 years ago in 2796@main and I’m not sure why. It’s causing an issue where,
if subsequent navigations to the same URL result in a 302 redirect to a new URL, the new URL is not added
to the back/forward list. This change aligns Safari’s behavior with Chrome and Firefox.

* LayoutTests/http/tests/history/redirect-302-twice-expected.txt: Added.
* LayoutTests/http/tests/history/redirect-302-twice.html: Added.
* LayoutTests/http/tests/history/resources/redirect-helper.pl:
* LayoutTests/http/tests/history/resources/redirect-target.html:
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::shouldTreatURLAsSameAsCurrent const):

Canonical link: https://commits.webkit.org/294798@main